--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mergington High School Activities</title>
     <link rel="stylesheet" href="styles.css" />
+    <style>
+      /* Estilos para la sección de participantes */
+      .participants-section {
+        margin-top: 0.5em;
+        background: #f8f9fa;
+        border-radius: 6px;
+        padding: 0.5em 1em;
+      }
+      .participants-list {
+        margin: 0.3em 0 0 1em;
+        padding: 0;
+        list-style-type: disc;
+        color: #333;
+      }
+      .no-participants {
+        color: #888;
+        font-style: italic;
+        margin: 0.2em 0 0 0.5em;
+      }
+    </style>
   </head>
   <body>
     <header>
